Bug Fix Covers Getting Stuck When Flipped.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,12 +22,7 @@ body {
     background-size: cover;
     width: 300px;
     height: 300px;
-    border-radius: 15px;
-    border-style: solid;
-    border-color: rgba(0, 0 , 0, 0.3);
-    border-width: 10px;
-    background-repeat: no-repeat;
-    backface-visibility: hidden;
+    /* backface-visibility: hidden; */
   }
 
   .flipped{
@@ -37,27 +32,37 @@ body {
   .block {
     display: block;
   }
+
+  /* .swiper-slide-active{
+    transform: rotateY(0deg) !important;
+  }
+  .swiper-slide-active.flipped{
+     transform: rotateY(180deg) !important; 
+  } */
   
-  .back-cover {
-    transform: rotateY(180deg);
-    backface-visibility: hidden;
+  .front-cover , .back-cover {
+    pointer-events: none;
+    position: absolute;
     background-position: center;
     background-size: cover;
     width: 300px;
     height: 300px;
-    pointer-events: auto;
-    z-index: 200;
     background-position: center;
     background-size: cover;
     width: 300px;
     height: 300px;
     border-radius: 15px;
     border-style: solid;
-    border-color: rgba(0, 0 , 0, 0.3);
+    border-color: rgba(255, 0, 0, 0.3);
     border-width: 10px;
     background-repeat: no-repeat;
-    backface-visibility: hidden;
-    
+    /* backface-visibility: hidden; */
+  }
+
+  .back-cover{
+    z-index: 0;
+    transform: rotateY(180deg);
+    pointer-events: none;
   }
 
   .hidden{
@@ -68,14 +73,14 @@ body {
     color: red;
   }
 
-  .swiper-wrapper{
+  /* .swiper-wrapper{
     pointer-events: none;
-  }
+  } */
 
   /* .swiper-container{
     pointer-events: none;
   } */
 
   .swiper-slide-active{
-    pointer-events: auto;
+    pointer-events: all;
   }
